tests/compile_fail/ctx_eq_incomparable.cc
// SPDX-License-Identifier: MIT
#include <umitest/test.hh>

void test() {
    umi::test::Suite s("x");
    s.run("x", [](auto& ctx) { ctx.eq(42, "hello"); });
}
